// Vitest Snapshot v1

exports[`Alert > Alert baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-alert
    message="() => h(\\"div\\", [\\"\\\\u8FD9\\\\u662F\\\\u4E00\\\\u6761\\\\u666E\\\\u901A\\\\u7684\\\\u6D88\\\\u606F\\\\u63D0\\\\u793A\\"])"
    theme="info"
  />
  <t-alert
    message="这是一条成功的消息提示"
    theme="success"
  />
  <t-alert
    theme="warning"
  />
  <t-alert
    theme="error"
  >
     这是一条失败信息提示 
  </t-alert>
</t-space>
`;

exports[`Alert > Alert closeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-alert
    close=""
    message="这是一条成功的消息提示"
    theme="success"
  />
  <t-alert
    close="知道了"
    message="这是一条普通的消息提示"
    theme="info"
  />
  <t-alert
    close="() => 'FunctionPropClose'"
    message="这是一条警示信息"
    theme="warning"
  />
  <t-alert
    message="高危操作/出错信息提示"
    theme="error"
  />
</t-space>
`;

exports[`Alert > Alert collapseVue demo works fine 1`] = `
<t-space>
  <t-alert
    close=""
    max-line="2"
    theme="info"
  >
    <span>
      这是折叠的第一条消息
    </span>
    <span>
      这是折叠的第二条消息
    </span>
    <span>
      这是折叠的第三条消息
    </span>
    <span>
      这是折叠的第四条消息
    </span>
    <span>
      这是折叠的第五条消息
    </span>
    <span>
      这是折叠的第六条消息
    </span>
  </t-alert>
</t-space>
`;

exports[`Alert > Alert iconVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-alert
    message="这是一条普通的消息提示"
    theme="info"
  />
  <t-alert
    message="这是一条警示消息提示"
    theme="warning"
  />
  <t-alert
    message="高危操作/出错信息提示"
    theme="error"
  />
  <t-alert
    icon="() => h(__vite_ssr_import_0__.Icon, {
        \\"attrs\\": {
          \\"name\\": \\"error-circle-filled\\"
        }
      })"
    message="这是一条警示信息(以function形式自定义icon)"
    theme="warning"
  />
  <t-alert
    message="高危操作/出错信息提示(以slot形式自定义icon)"
    theme="error"
  />
</t-space>
`;

exports[`Alert > Alert operationVue demo works fine 1`] = `
<t-space>
  <t-alert
    close=""
    message="这是一条普通的消息提示"
    theme="info"
  />
</t-space>
`;

exports[`Alert > Alert titleVue demo works fine 1`] = `
<t-space>
  <t-alert
    close=""
    message="这是与普通的消息提示相关的文字辅助说明"
    theme="info"
    title="这是一条普通的消息提示"
  />
</t-space>
`;
